# xfsprogs

./: .gitignore  Makefile  Makepkgs  VERSION  aclocal.m4  configure.ac  configure.in  install-sh  release.sh
bmap/: Makefile  xfs_bmap.c
copy/: Makefile  xfs_copy.c  xfs_copy.h
db/: Makefile  addr.c  addr.h  agf.c  agf.h  agfl.c  agfl.h  agi.c  agi.h  attr.c  attr.h  attrset.c  attrset.h  attrshort.c  attrshort.h  bit.c  bit.h  block.c  block.h  bmap.c  bmap.h  bmapbt.c  bmapbt.h  bmroot.c  bmroot.h  bnobt.c  bnobt.h  btblock.c  btblock.h  check.c  check.h  cntbt.c  cntbt.h  command.c  command.h  convert.c  convert.h  data.c  data.h  dbread.c  (+74 more)
debian/: Makefile  changelog  control  copyright  rules  watch
doc/: CHANGES  COPYING  CREDITS  INSTALL  Makefile  PORTING  README.quota
estimate/: Makefile  xfs_estimate.c
freeze/: Makefile  xfs_freeze.c
fsck/: Makefile  xfs_fsck.c  xfs_fsck.sh
fsr/: Makefile  xfs_fsr.c
growfs/: Makefile  explore.c  explore.h  xfs_growfs.c  xfs_info.sh
imap/: Makefile  xfs_imap.c
include/: Makefile  arch.h  bitops.h  builddefs.in  buildmacros  buildrules  cache.h  command.h  darwin.h  dvh.h  freebsd.h  fstyp.h  gnukfreebsd.h  handle.h  input.h  irix.h  jdm.h  libxfs.h  libxlog.h  linux.h  list.h  mountinfo.h  path.h  platform_defs.h.in  project.h  swab.h  unaligned.h  volume.h  xfs_acl.h  xfs_ag.h  xfs_alloc.h  xfs_alloc_btree.h  xfs_arch.h  xfs_attr_leaf.h  xfs_attr_remote.h  xfs_attr_sf.h  xfs_bit.h  xfs_bmap.h  xfs_bmap_btree.h  xfs_btree.h  (+45 more)
io/: Makefile  attr.c  bmap.c  command.c  command.h  fadvise.c  fiemap.c  file.c  freeze.c  fsync.c  getrusage.c  help.c  imap.c  init.c  init.h  inject.c  input.c  input.h  io.h  link.c  madvise.c  mincore.c  mlock.c  mmap.c  open.c  parent.c  pread.c  prealloc.c  pwrite.c  quit.c  readdir.c  resblks.c  seek.c  sendfile.c  shutdown.c  sync.c  sync_file_range.c  truncate.c  xfs_bmap.sh  xfs_freeze.sh
libdisk/: Makefile  dm.c  drivers.c  drivers.h  evms.c  evms.h  fstype.c  fstype.h  lvm.c  md.c  md.h  mountinfo.c  pttype.c  pttype.h  xvm.c  xvm.h
libhandle/: Makefile  handle.c  jdm.c
libxcmd/: Makefile  command.c  help.c  input.c  paths.c  projects.c  quit.c
libxfs/: Makefile  bit.c  cache.c  crc32.c  darwin.c  freebsd.c  init.c  init.h  irix.c  linux.c  lio.c  logitem.c  rdwr.c  trans.c  util.c  xfs.h  xfs_alloc.c  xfs_alloc_btree.c  xfs_attr.c  xfs_attr_leaf.c  xfs_attr_remote.c  xfs_bit.c  xfs_bmap.c  xfs_bmap_btree.c  xfs_btree.c  xfs_da_btree.c  xfs_dir.c  xfs_dir2.c  xfs_dir2_block.c  xfs_dir2_data.c  xfs_dir2_leaf.c  xfs_dir2_node.c  xfs_dir2_priv.h  xfs_dir2_sf.c  xfs_dir_leaf.c  xfs_dquot_buf.c  xfs_ialloc.c  xfs_ialloc_btree.c  xfs_inode.c  xfs_inode_buf.c  (+11 more)
libxlog/: Makefile  util.c  xfs_log_recover.c
logprint/: Makefile  log_copy.c  log_dump.c  log_misc.c  log_print_all.c  log_print_trans.c  logprint.c  logprint.h
m4/: Makefile  package_aiodev.m4  package_globals.m4  package_libcdev.m4  package_types.m4  package_utilies.m4  package_uuiddev.m4
man/: Makefile
man/man3/: Makefile  handle.3  xfsctl.3
man/man5/: Makefile  xfs.5
man/man8/: Makefile  fsck.xfs.8  mkfs.xfs.8  xfs_admin.8  xfs_bmap.8  xfs_check.8  xfs_copy.8  xfs_db.8  xfs_estimate.8  xfs_freeze.8  xfs_growfs.8  xfs_io.8  xfs_logprint.8  xfs_mdrestore.8  xfs_metadump.8  xfs_ncheck.8  xfs_quota.8  xfs_repair.8
mdrestore/: Makefile  xfs_mdrestore.c
mkfile/: Makefile  xfs_mkfile.c
mkfs/: Makefile  fstyp.c  maxtrres.c  proto.c  proto.h  trtab.c  xfs_mkfs.c  xfs_mkfs.h
po/: Makefile  de.po  pl.po  xfsprogs.pot
quota/: Makefile  darwin.c  edit.c  free.c  freebsd.c  init.c  init.h  irix.c  linux.c  path.c  project.c  quot.c  quota.c  quota.h  report.c  state.c  util.c
repair/: Makefile  README  agheader.c  agheader.h  attr_repair.c  attr_repair.h  avl.c  avl.h  avl64.c  avl64.h  bmap.c  bmap.h  btree.c  dino_chunks.c  dinode.c  dinode.h  dir.c  dir.h  dir2.c  dir2.h  dir_stack.c  dir_stack.h  err_protos.h  globals.c  globals.h  incore.c  incore.h  incore_bmc.c  incore_ext.c  incore_ino.c  init.c  io.c  phase1.c  phase2.c  phase3.c  phase4.c  phase5.c  phase6.c  phase7.c  prefetch.c  (+15 more)
rtcp/: Makefile  xfs_rtcp.c
